[package]
name = "convi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
dioxus = { version = "0.2.4", features = ["desktop"] }
dirs = "4.0.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
rfd = "0.10.0"
